--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,42 @@
 @@include('components/_base/_base-header.html')
 
 <main class="page-content">
+  <section class="heading">
+
+    <div class="heading__graphic">
+      <div class="heading__graphic-wrapper"></div>
+    </div>
+
+    <div class="heading__container base-container">
+      <div class="heading__column heading__column--left">
+        <h1 class="heading__title section-title base-title"></h1>
+        <div class="heading__text">
+          <p></p>
+        </div>
+        <div class="heading__thumbnail-slider swiper">
+          <div class="heading__thumbnail-wrapper swiper-wrapper">
+            <div class="heading__thumbnail-slide swiper-slide">
+              <!-- <figure class="heading__thumbnail-image base-figure">
+                <img class="heading__thumbnail-img" src="#" alt="#">
+              </figure> -->
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="heading__column heading__column--right">
+        <div class="heading__main-slider swiper">
+          <div class="heading__main-wrapper swiper-wrapper">
+            <div class="heading__main-slide swiper-slide">
+              <!-- <figure class="heading__main-image base-figure">
+                <img class="heading__main-img" src="#" alt="#">
+              </figure> -->
+            </div>
+          </div>
+          <a class="heading__column-link graphic-button base-link" href="#"></a>
+        </div>
+      </div>
+    </div>
+  </section>
 </main>
 
 @@include('components/_base/_base-footer.html')
