--- a/index.html
+++ b/index.html
@@ -126,32 +126,85 @@
     </div>
 
     <div class="heading__container base-container">
-      <div class="heading__column heading__column--left">
-        <h1 class="heading__title section-title base-title"></h1>
-        <div class="heading__text">
-          <p></p>
-        </div>
-        <div class="heading__thumbnail-slider swiper">
-          <div class="heading__thumbnail-wrapper swiper-wrapper">
-            <div class="heading__thumbnail-slide swiper-slide">
-              <!-- <figure class="heading__thumbnail-image base-figure">
-                <img class="heading__thumbnail-img" src="#" alt="#">
-              </figure> -->
+      <div class="heading__slider swiper">
+        <div class="heading__slider-wrapper swiper-wrapper">
+          <div class="heading__slider-slide swiper-slide">
+            <div class="heading__slide-column">
+              <h2 class="heading__slide-title section-title base-title">Лучший сервис услуг в <span class="color-elm">Португалии!</span></h2>
+              <div class="heading__slide-text">
+                <p>
+                  Компания USC Master занимается различными
+                  видами сервиса: мелкий ремонт, клининг, уход
+                  за садами и бассейнами, химчистка диванов,
+                  ковровых покрытий и многое другое.
+                  Наши сильные стороны профессионализм и оперативность.
+                </p>
+              </div>
             </div>
+            <figure class="heading__slide-image base-figure">
+              <img class="heading__slide-img" src="img/image/heading-slide-1.png" width="740" height="500" alt="#">
+            </figure>
+          </div>
+          <div class="heading__slider-slide swiper-slide">
+            <div class="heading__slide-column">
+              <h2 class="heading__slide-title section-title base-title">Лучший сервис услуг в <span class="color-elm">Португалии!</span></h2>
+              <div class="heading__slide-text">
+                <p>
+                  Компания USC Master предоставляет широкий
+                  спектр услуг: уборка помещений, ремонт,
+                  уход за садами и бассейнами, химчистка мебели
+                  и ковровых покрытий и многое другое.
+                  Наша команда состоит из профессионалов,
+                  которые гарантируют высокое
+                  качество оказываемых услуг.
+                </p>
+              </div>
+            </div>
+            <figure class="heading__slide-image base-figure">
+              <img class="heading__slide-img" src="img/image/heading-slide-2.png" width="740" height="500" alt="#">
+            </figure>
+          </div>
+          <div class="heading__slider-slide swiper-slide">
+            <div class="heading__slide-column">
+              <h2 class="heading__slide-title section-title base-title">Лучший сервис услуг в <span class="color-elm">Португалии!</span></h2>
+              <div class="heading__slide-text">
+                <p>
+                  Мы гарантируем
+                  оперативность и быстрое реагирование на все запросы наших клиентов.
+                  Если вы нуждаетесь в надежном и профессиональном
+                  сервисе, свяжитесь с нами сегодня и убедитесь сами в качестве наших услуг!
+                </p>
+              </div>
+            </div>
+            <figure class="heading__slide-image base-figure">
+              <img class="heading__slide-img" src="img/image/heading-slide-3.png" width="740" height="500" alt="#">
+            </figure>
           </div>
         </div>
       </div>
-      <div class="heading__column heading__column--right">
-        <div class="heading__main-slider swiper">
-          <div class="heading__main-wrapper swiper-wrapper">
-            <div class="heading__main-slide swiper-slide">
-              <!-- <figure class="heading__main-image base-figure">
-                <img class="heading__main-img" src="#" alt="#">
-              </figure> -->
+
+      <div class="heading__underline">
+        <div class="heading__thumbnail-slider swiper" thumbsSlider="">
+          <div class="heading__thumbnail-wrapper swiper-wrapper">
+            <div class="heading__thumbnail-slide swiper-slide">
+              <figure class="heading__thumbnail-image base-figure">
+                <img class="heading__thumbnail-img" src="img/image/heading-slide-1.png" width="155" height="86" alt="#">
+              </figure>
+            </div>
+            <div class="heading__thumbnail-slide swiper-slide">
+              <figure class="heading__thumbnail-image base-figure">
+                <img class="heading__thumbnail-img" src="img/image/heading-slide-2.png" width="155" height="86" alt="#">
+              </figure>
+            </div>
+            <div class="heading__thumbnail-slide swiper-slide">
+              <figure class="heading__thumbnail-image base-figure">
+                <img class="heading__thumbnail-img" src="img/image/heading-slide-3.png" width="155" height="86" alt="#">
+              </figure>
             </div>
           </div>
-          <a class="heading__column-link graphic-button base-link" href="#"></a>
         </div>
+
+        <div class="heading__thumbnail-pagination swiper-pagination"></div>
       </div>
     </div>
   </section>
