feat: 🎸 Главная: разметка, стилизация

--- a/src/index.html
+++ b/src/index.html
@@ -90,6 +90,324 @@
       </div>
     </div>
   </section>
+
+  <section class="description">
+    <div class="description__container base-container">
+      <div class="description__column description__column--left">
+        <h2 class="description__column-title section-title base-title"><span class="color-elm">USC Master</span> занимается разными видами сервиса</h2>
+        <div class="description__column-text main-text">
+          <p>USC Master предлагает различные услуги,
+            чтобы удовлетворить ваши потребности.
+            Наша опытная команда посвящена предоставлению
+            качественной работы с отличным обслуживанием клиентов.
+          </p>
+          <p>
+            Независимо от того, нужна ли вам помощь в
+            работе по дому или вы хотите перестроить ваше
+            пространство, мы обладаем опытом, чтобы
+            выполнить работу правильно.
+          </p>
+        </div>
+      </div>
+      <div class="description__column description__column--right">
+        <figure class="description__column-image base-figure">
+          <img class="description__column-img" src="img/image/description-image.png" width="526" height="272" alt="#">
+        </figure>
+        <div class="description__column-text main-text">
+          <p>
+            Под каждый заказ подбираем команду специалистов,
+            Чтобы выполнить любую работу. Звоните, вышлем команду.
+            Вы увидите, как выглядит идеальная сервис.
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="services">
+    <div class="services__container base-container">
+      <h2 class="services__title section-title base-title">«USC Master» - компания с качественной<br> продукцией на рынке</h2>
+    </div>
+    <div class="services__slider swiper">
+      <div class="services__slider-wrapper swiper-wrapper">
+        <div class="services__slider-slide swiper-slide">
+          <div class="services__slide-item">
+            <figure class="services__slide-image base-figure">
+              <img class="services__slide-img" src="img/image/heading-slide-1.png" width="636" height="440" alt="#">
+            </figure>
+            <div class="services__slide-info">
+              Уборка общежития<br>
+              <b>от 45₽/час</b>
+            </div>
+          </div>
+          <div class="services__slide-item">
+            <figure class="services__slide-image base-figure">
+              <img class="services__slide-img" src="img/image/heading-slide-1.png" width="636" height="440" alt="#">
+            </figure>
+            <div class="services__slide-info">
+              Уборка общежития<br>
+              <b>от 45₽/час</b>
+            </div>
+          </div>
+        </div>
+        <div class="services__slider-slide swiper-slide">
+          <div class="services__slide-item">
+            <figure class="services__slide-image base-figure">
+              <img class="services__slide-img" src="img/image/heading-slide-1.png" width="636" height="440" alt="#">
+            </figure>
+            <div class="services__slide-info">
+              Уборка общежития<br>
+              <b>от 45₽/час</b>
+            </div>
+          </div>
+          <div class="services__slide-item">
+            <figure class="services__slide-image base-figure">
+              <img class="services__slide-img" src="img/image/heading-slide-2.png" width="636" height="440" alt="#">
+            </figure>
+            <div class="services__slide-info">
+              Уборка общежития<br>
+              <b>от 45₽/час</b>
+            </div>
+          </div>
+        </div>
+        <div class="services__slider-slide swiper-slide">
+          <div class="services__slide-item">
+            <figure class="services__slide-image base-figure">
+              <img class="services__slide-img" src="img/image/heading-slide-1.png" width="636" height="440" alt="#">
+            </figure>
+            <div class="services__slide-info">
+              Уборка общежития<br>
+              <b>от 45₽/час</b>
+            </div>
+          </div>
+          <div class="services__slide-item">
+            <figure class="services__slide-image base-figure">
+              <img class="services__slide-img" src="img/image/heading-slide-2.png" width="636" height="440" alt="#">
+            </figure>
+            <div class="services__slide-info">
+              Уборка общежития<br>
+              <b>от 45₽/час</b>
+            </div>
+          </div>
+        </div>
+        <div class="services__slider-slide swiper-slide">
+          <div class="services__slide-item">
+            <figure class="services__slide-image base-figure">
+              <img class="services__slide-img" src="img/image/heading-slide-1.png" width="636" height="440" alt="#">
+            </figure>
+            <div class="services__slide-info">
+              Уборка общежития<br>
+              <b>от 45₽/час</b>
+            </div>
+          </div>
+          <div class="services__slide-item">
+            <figure class="services__slide-image base-figure">
+              <img class="services__slide-img" src="img/image/heading-slide-2.png" width="636" height="440" alt="#">
+            </figure>
+            <div class="services__slide-info">
+              Уборка общежития<br>
+              <b>от 45₽/час</b>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="services__slider-arrows slider-arrows">
+        <button class="slider-arrow slider-arrow--prev base-button">
+          <svg class="slider-arrow__icon" width="11" height="18" alt="#">
+            <use href="img/icon/sprite.svg#slider-arrow-icon"></use>
+          </svg>
+        </button>
+        <button class="slider-arrow slider-arrow--next base-button" style="transform: scaleX(-1);">
+          <svg class="slider-arrow__icon" width="11" height="18" alt="#">
+            <use href="img/icon/sprite.svg#slider-arrow-icon"></use>
+          </svg>
+        </button>
+      </div>
+    </div>
+  </section>
+
+  <section class="features">
+    <div class="features__container base-container">
+      <h2 class="features__title section-title base-title"><span class="color-elm">Виды услуг</span>, которые мы<br> предоставляем </h2>
+      <div class="features__wrapper">
+        <div class="features__wrapper-item">
+          <div class="features__item-info">
+            <h3 class="features__item-title base-title">Сервис 24/7</h3>
+            <div class="features__item-num">01</div>
+          </div>
+          <div class="features__item-content">
+            <div class="features__item-text main-text">
+              <p>
+                MASTER USC - это компания,
+                которая к вашим услугам 24 часа в сутки, 7
+                дней в неделю, 365 дней в году.Всего одним
+                телефонным звонком или щелчком мыши команда
+                специализированных профессионалов удовлетворит
+                ваши потребности.
+              </p>
+            </div>
+            <figure class="features__item-image base-figure">
+              <img class="features__item-img" width="416" height="205" src="img/image/features-1.png" alt="#">
+            </figure>
+          </div>
+        </div>
+        <div class="features__wrapper-item">
+          <div class="features__item-info">
+            <h3 class="features__item-title base-title">Сервис 24/7</h3>
+            <div class="features__item-num">01</div>
+          </div>
+          <div class="features__item-content">
+            <div class="features__item-text main-text">
+              <p>
+                MASTER USC - это компания,
+                которая к вашим услугам 24 часа в сутки, 7
+                дней в неделю, 365 дней в году.Всего одним
+                телефонным звонком или щелчком мыши команда
+                специализированных профессионалов удовлетворит
+                ваши потребности.
+              </p>
+            </div>
+            <figure class="features__item-image base-figure">
+              <img class="features__item-img" width="416" height="205" src="img/image/features-1.png" alt="#">
+            </figure>
+          </div>
+        </div>
+        <div class="features__wrapper-item">
+          <div class="features__item-info">
+            <h3 class="features__item-title base-title">Сервис 24/7</h3>
+            <div class="features__item-num">01</div>
+          </div>
+          <div class="features__item-content">
+            <div class="features__item-text main-text">
+              <p>
+                MASTER USC - это компания,
+                которая к вашим услугам 24 часа в сутки, 7
+                дней в неделю, 365 дней в году.Всего одним
+                телефонным звонком или щелчком мыши команда
+                специализированных профессионалов удовлетворит
+                ваши потребности.
+              </p>
+            </div>
+            <figure class="features__item-image base-figure">
+              <img class="features__item-img" width="416" height="205" src="img/image/features-1.png" alt="#">
+            </figure>
+          </div>
+        </div>
+        <div class="features__wrapper-item">
+          <div class="features__item-info">
+            <h3 class="features__item-title base-title">Сервис 24/7</h3>
+            <div class="features__item-num">01</div>
+          </div>
+          <div class="features__item-content">
+            <div class="features__item-text main-text">
+              <p>
+                MASTER USC - это компания,
+                которая к вашим услугам 24 часа в сутки, 7
+                дней в неделю, 365 дней в году.Всего одним
+                телефонным звонком или щелчком мыши команда
+                специализированных профессионалов удовлетворит
+                ваши потребности.
+              </p>
+            </div>
+            <figure class="features__item-image base-figure">
+              <img class="features__item-img" width="416" height="205" src="img/image/features-1.png" alt="#">
+            </figure>
+          </div>
+        </div>
+        <div class="features__wrapper-item">
+          <div class="features__item-info">
+            <h3 class="features__item-title base-title">Сервис 24/7</h3>
+            <div class="features__item-num">01</div>
+          </div>
+          <div class="features__item-content">
+            <div class="features__item-text main-text">
+              <p>
+                MASTER USC - это компания,
+                которая к вашим услугам 24 часа в сутки, 7
+                дней в неделю, 365 дней в году.Всего одним
+                телефонным звонком или щелчком мыши команда
+                специализированных профессионалов удовлетворит
+                ваши потребности.
+              </p>
+            </div>
+            <figure class="features__item-image base-figure">
+              <img class="features__item-img" width="416" height="205" src="img/image/features-1.png" alt="#">
+            </figure>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="callback-block">
+    <div class="callback-block__container base-container">
+      <h2 class="callback-block__title section-title base-title"><span class="color-elm">Свяжитесь с нами</span> и мы вам поможем</h2>
+      <div class="callback-block__wrapper">
+        <div class="callback-block__column callback-block__column--left">
+          <div class="callback-block__column-caption">
+            <p>Нужно что-то<br>
+              отличающееся от<br>
+              стандартных программ<br>
+              уборки? Поможем.</p>
+          </div>
+          <div class="callback-block__column-contacts">
+            <h3 class="callback-block__contacts-title base-title">Наши контакты</h3>
+            <div class="callback-block__contacts-main">
+              <p>
+                Адрес: Rua Master Usc nº67<br>
+                2500-000 Estoril - PORTUGAL<br>
+                Тел: +351 91 596 38 55 <a href="mailto:help@uscmaster.com">help@uscmaster.com</a><br>
+                <a href="www.uscmaster.com">www.uscmaster.com</a>
+              </p>
+            </div>
+            @@include('components/_bem/_socials.html')
+          </div>
+        </div>
+        <div class="callback-block__column callback-block__column--right">
+          <figure class="callback-block__column-image base-figure">
+            <img class="callback-block__column-img" src="img/image/callback-block-image.png" width="636" height="283" alt="#">
+          </figure>
+          <div class="callback-block__column-desc main-text">
+            <p>
+              Свяжитесь с нами, чтобы обсудить ваши потребности и получить бесплатную консультацию. Мы уверены, что сможем превзойти ваши ожидания!
+            </p>
+          </div>
+        </div>
+        <button class="persi-button base-button" type="button" id="callback_modal_button">
+          Заказать<br>
+          звонок
+        </button>
+      </div>
+    </div>
+  </section>
+
+  <section class="map" id="map">
+    <style>
+      .map {
+        height: 459px !important;
+        background-color: var(--color-white);
+
+        padding: 58px 0 0 0;
+      }
+
+      .ymaps-2-1-79-ground-pane {
+        -ms-filter: grayscale(1);
+        -webkit-filter: grayscale(1);
+        -moz-filter: grayscale(1);
+        -o-filter: grayscale(1);
+        filter: grayscale(1);
+      }
+
+      .tn-elem__4346096441649723484272 {
+        mix-blend-mode: difference;
+        display: flex !important;
+        pointer-events: all;
+      }
+    </style>
+
+    <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
+    <script> ymaps.ready(function () { var myMap = new ymaps.Map('map', { center: [53.902284, 27.561831], zoom: 11 }, { searchControlProvider: 'yandex#search' }), MyIconContentLayout = ymaps.templateLayoutFactory.createClass('<div style="color: #FFFFFF; font-weight: medium;">$[properties.iconContent]</div>'), myPlacemarkWithContent = new ymaps.Placemark([53.902284, 27.561831], { hintContent: 'город Минск' }, { iconLayout: 'default#imageWithContent', iconImageHref: 'https://files.catbox.moe/sw6ezc.png', iconImageSize: [55, 55], iconImageOffset: [0, 0], iconContentOffset: [15, 15], iconContentLayout: MyIconContentLayout }); myMap.geoObjects.add(myPlacemarkWithContent); }); </script>
+  </section>
 </main>
 
 @@include('components/_base/_base-footer.html')
