feat: 🎸 Главная: адаптив

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,8 @@
       <div class="heading__graphic-wrapper"></div>
     </div>
 
+    <div class="heading__graphic heading__graphic--left"></div>
+
     <div class="heading__container base-container">
       <div class="heading__slider swiper">
         <div class="heading__slider-wrapper swiper-wrapper">
@@ -87,6 +89,10 @@
         </div>
 
         <div class="heading__thumbnail-pagination swiper-pagination"></div>
+
+        <a class="persi-button base-link" href="#projects">
+          Проекты
+        </a>
       </div>
     </div>
   </section>
@@ -124,8 +130,8 @@
     </div>
   </section>
 
-  <section class="services">
-    <div class="services__container base-container">
+  <section class="services" id="particles">
+    <div class="services__container base-container" id="projects">
       <h2 class="services__title section-title base-title">«USC Master» - компания с качественной<br> продукцией на рынке</h2>
     </div>
     <div class="services__slider swiper">
