--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <meta name="format-detection" content="address=no">
   <meta name="format-detection" content="email=no">
 
+  <base href="/">
   <link href="css/style.min.css?v=1.0" rel="stylesheet">
   <title></title>
 </head>
@@ -125,6 +126,8 @@
       <div class="heading__graphic-wrapper"></div>
     </div>
 
+    <div class="heading__graphic heading__graphic--left"></div>
+
     <div class="heading__container base-container">
       <div class="heading__slider swiper">
         <div class="heading__slider-wrapper swiper-wrapper">
@@ -205,6 +208,10 @@
         </div>
 
         <div class="heading__thumbnail-pagination swiper-pagination"></div>
+
+        <a class="persi-button base-link" href="#projects">
+          Проекты
+        </a>
       </div>
     </div>
   </section>
@@ -242,8 +249,8 @@
     </div>
   </section>
 
-  <section class="services">
-    <div class="services__container base-container">
+  <section class="services" id="particles">
+    <div class="services__container base-container" id="projects">
       <h2 class="services__title section-title base-title">«USC Master» - компания с качественной<br> продукцией на рынке</h2>
     </div>
     <div class="services__slider swiper">
@@ -619,14 +626,16 @@
   </div>
 
   <div class="footer-underline">
-    <span class="footer-underline__copyright">© 2023 Master Usc</span>
-    <a class="footer-underline__policy base-link" href="#">Политика конфиденциальности</a>
-    <a class="footer-underline__credits base-link" href="">
-      <span class="footer-underline__credits-text">Разработано</span>
-      <svg class="footer-underline__credits-icon" width="52" height="22" aria-hidden="true">
-        <use href="img/icon/sprite.svg#isart-icon"></use>
-      </svg>
-    </a>
+    <div class="footer-underline__container base-container">
+      <span class="footer-underline__copyright">© 2023 Master Usc</span>
+      <a class="footer-underline__policy base-link" href="#">Политика конфиденциальности</a>
+      <a class="footer-underline__credits base-link" href="#">
+        <span class="footer-underline__credits-text">Разработано</span>
+        <svg class="footer-underline__credits-icon" width="52" height="22" aria-hidden="true">
+          <use href="img/icon/sprite.svg#isart-icon"></use>
+        </svg>
+      </a>
+    </div>
   </div>
 </footer>
 
