feat: 🎸 Главная: адаптив

--- a/src/index.html
+++ b/src/index.html
@@ -65,6 +65,18 @@
             </figure>
           </div>
         </div>
+        <div class="heading__slider-arrows slider-arrows">
+          <button class="heading__slider-arrow heading__slider-arrow--prev slider-arrow slider-arrow--prev base-button">
+            <svg class="slider-arrow__icon" width="11" height="18" alt="#">
+              <use href="img/icon/sprite.svg#slider-arrow-icon"></use>
+            </svg>
+          </button>
+          <button class="heading__slider-arrow heading__slider-arrow--prev slider-arrow slider-arrow--next base-button" style="transform: scaleX(-1);">
+            <svg class="slider-arrow__icon" width="11" height="18" alt="#">
+              <use href="img/icon/sprite.svg#slider-arrow-icon"></use>
+            </svg>
+          </button>
+        </div>
       </div>
 
       <div class="heading__underline">
@@ -218,12 +230,12 @@
         </div>
       </div>
       <div class="services__slider-arrows slider-arrows">
-        <button class="slider-arrow slider-arrow--prev base-button">
+        <button class="services__slider-arrow services__slider-arrow--prev slider-arrow slider-arrow--prev base-button">
           <svg class="slider-arrow__icon" width="11" height="18" alt="#">
             <use href="img/icon/sprite.svg#slider-arrow-icon"></use>
           </svg>
         </button>
-        <button class="slider-arrow slider-arrow--next base-button" style="transform: scaleX(-1);">
+        <button class="services__slider-arrow services__slider-arrow--prev slider-arrow slider-arrow--next base-button" style="transform: scaleX(-1);">
           <svg class="slider-arrow__icon" width="11" height="18" alt="#">
             <use href="img/icon/sprite.svg#slider-arrow-icon"></use>
           </svg>
