--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
 
         <div class="main-nav__nav-menu main-nav__nav-menu--mobile" id="mobile_menu">
 
-          <a class="main-nav__logo-link main-nav__logo-link--mobile base-link" href="index.html">
+          <!-- <a class="main-nav__logo-link main-nav__logo-link--mobile base-link" href="index.html">
             <svg class="main-nav__logo-icon" width="127" height="92" alt="Логотип">
               <use href="img/icon/sprite.svg#logo-icon"></use>
             </svg>
-          </a>
+          </a> -->
 
           <ul class="main-nav__nav-list base-list">
             <li class="main-nav__nav-item">
@@ -182,6 +182,18 @@
               <img class="heading__slide-img" src="img/image/heading-slide-3.png" width="740" height="500" alt="#">
             </figure>
           </div>
+        </div>
+        <div class="heading__slider-arrows slider-arrows">
+          <button class="heading__slider-arrow heading__slider-arrow--prev slider-arrow slider-arrow--prev base-button">
+            <svg class="slider-arrow__icon" width="11" height="18" alt="#">
+              <use href="img/icon/sprite.svg#slider-arrow-icon"></use>
+            </svg>
+          </button>
+          <button class="heading__slider-arrow heading__slider-arrow--prev slider-arrow slider-arrow--next base-button" style="transform: scaleX(-1);">
+            <svg class="slider-arrow__icon" width="11" height="18" alt="#">
+              <use href="img/icon/sprite.svg#slider-arrow-icon"></use>
+            </svg>
+          </button>
         </div>
       </div>
 
@@ -336,12 +348,12 @@
         </div>
       </div>
       <div class="services__slider-arrows slider-arrows">
-        <button class="slider-arrow slider-arrow--prev base-button">
+        <button class="services__slider-arrow services__slider-arrow--prev slider-arrow slider-arrow--prev base-button">
           <svg class="slider-arrow__icon" width="11" height="18" alt="#">
             <use href="img/icon/sprite.svg#slider-arrow-icon"></use>
           </svg>
         </button>
-        <button class="slider-arrow slider-arrow--next base-button" style="transform: scaleX(-1);">
+        <button class="services__slider-arrow services__slider-arrow--prev slider-arrow slider-arrow--next base-button" style="transform: scaleX(-1);">
           <svg class="slider-arrow__icon" width="11" height="18" alt="#">
             <use href="img/icon/sprite.svg#slider-arrow-icon"></use>
           </svg>
