--- a/index.html
+++ b/index.html
@@ -106,11 +106,15 @@
         </svg>
       </button>
       <div class="modal-callback__inner">
-
-        <form class="modal-callback__form" id="modal_callback_form">
-          <button class="modal-callback__submit base-button" type="submit">Связаться с нами</button>
+        <span class="modal-callback__inner-title base-title">Заказать звонок</span>
+        <p class="modal-callback__inner-subtitle base-par">
+          Отправьте заявку и наш менеджер с вами свяжется в ближайшее время
+        </p>
+        <form class="modal-callback__inner-form" id="modal_callback_form">
+          <input class="modal-callback__form-input" type="text" name="name">
+          <input class="modal-callback__form-input" type="phone" name="phone">
+          <button class="modal-callback__form-submit base-button" type="submit">Отправить</button>
         </form>
-
       </div>
       <div class="modal-callback__success">
         <span class="modal-callback__success-text">Спасибо, ваша заявка отправлена</span>
@@ -189,7 +193,7 @@
               <use href="img/icon/sprite.svg#slider-arrow-icon"></use>
             </svg>
           </button>
-          <button class="heading__slider-arrow heading__slider-arrow--prev slider-arrow slider-arrow--next base-button" style="transform: scaleX(-1);">
+          <button class="heading__slider-arrow heading__slider-arrow--next slider-arrow slider-arrow--next base-button" style="transform: scaleX(-1);">
             <svg class="slider-arrow__icon" width="11" height="18" alt="#">
               <use href="img/icon/sprite.svg#slider-arrow-icon"></use>
             </svg>
@@ -228,7 +232,7 @@
   </section>
 
   <section class="description">
-    <div class="description__container base-container">
+    <div class="description__container base-container" id="about">
       <div class="description__column description__column--left">
         <h2 class="description__column-title section-title base-title"><span class="color-elm">USC Master</span> занимается разными видами сервиса</h2>
         <div class="description__column-text main-text">
@@ -260,90 +264,65 @@
     </div>
   </section>
 
-  <section class="services" id="particles">
+  <section class="services">
     <div class="services__container base-container" id="projects">
-      <h2 class="services__title section-title base-title">«USC Master» - компания с качественной<br> продукцией на рынке</h2>
+      <h2 class="services__title section-title base-title">«USC Master» - компания с качественной продукцией на рынке</h2>
     </div>
     <div class="services__slider swiper">
       <div class="services__slider-wrapper swiper-wrapper">
         <div class="services__slider-slide swiper-slide">
-          <div class="services__slide-item">
-            <figure class="services__slide-image base-figure">
+          <figure class="services__slide-image base-figure">
+            <a data-fslightbox href="img/image/heading-slide-1.png">
               <img class="services__slide-img" src="img/image/heading-slide-1.png" width="636" height="440" alt="#">
-            </figure>
-            <div class="services__slide-info">
-              Уборка общежития<br>
-              <b>от 45₽/час</b>
-            </div>
-          </div>
-          <div class="services__slide-item">
-            <figure class="services__slide-image base-figure">
-              <img class="services__slide-img" src="img/image/heading-slide-1.png" width="636" height="440" alt="#">
-            </figure>
-            <div class="services__slide-info">
-              Уборка общежития<br>
-              <b>от 45₽/час</b>
-            </div>
+            </a>
+          </figure>
+          <div class="services__slide-info">
+            Уборка общежития<br>
+            <b>от 45₽/час</b>
           </div>
         </div>
         <div class="services__slider-slide swiper-slide">
-          <div class="services__slide-item">
-            <figure class="services__slide-image base-figure">
+          <figure class="services__slide-image base-figure">
+            <a data-fslightbox href="img/image/heading-slide-1.png">
               <img class="services__slide-img" src="img/image/heading-slide-1.png" width="636" height="440" alt="#">
-            </figure>
-            <div class="services__slide-info">
-              Уборка общежития<br>
-              <b>от 45₽/час</b>
-            </div>
-          </div>
-          <div class="services__slide-item">
-            <figure class="services__slide-image base-figure">
-              <img class="services__slide-img" src="img/image/heading-slide-2.png" width="636" height="440" alt="#">
-            </figure>
-            <div class="services__slide-info">
-              Уборка общежития<br>
-              <b>от 45₽/час</b>
-            </div>
+            </a>
+          </figure>
+          <div class="services__slide-info">
+            Уборка общежития<br>
+            <b>от 45₽/час</b>
           </div>
         </div>
         <div class="services__slider-slide swiper-slide">
-          <div class="services__slide-item">
-            <figure class="services__slide-image base-figure">
+          <figure class="services__slide-image base-figure">
+            <a data-fslightbox href="img/image/heading-slide-1.png">
               <img class="services__slide-img" src="img/image/heading-slide-1.png" width="636" height="440" alt="#">
-            </figure>
-            <div class="services__slide-info">
-              Уборка общежития<br>
-              <b>от 45₽/час</b>
-            </div>
-          </div>
-          <div class="services__slide-item">
-            <figure class="services__slide-image base-figure">
-              <img class="services__slide-img" src="img/image/heading-slide-2.png" width="636" height="440" alt="#">
-            </figure>
-            <div class="services__slide-info">
-              Уборка общежития<br>
-              <b>от 45₽/час</b>
-            </div>
+            </a>
+          </figure>
+          <div class="services__slide-info">
+            Уборка общежития<br>
+            <b>от 45₽/час</b>
           </div>
         </div>
         <div class="services__slider-slide swiper-slide">
-          <div class="services__slide-item">
-            <figure class="services__slide-image base-figure">
+          <figure class="services__slide-image base-figure">
+            <a data-fslightbox href="img/image/heading-slide-1.png">
               <img class="services__slide-img" src="img/image/heading-slide-1.png" width="636" height="440" alt="#">
-            </figure>
-            <div class="services__slide-info">
-              Уборка общежития<br>
-              <b>от 45₽/час</b>
-            </div>
+            </a>
+          </figure>
+          <div class="services__slide-info">
+            Уборка общежития<br>
+            <b>от 45₽/час</b>
           </div>
-          <div class="services__slide-item">
-            <figure class="services__slide-image base-figure">
-              <img class="services__slide-img" src="img/image/heading-slide-2.png" width="636" height="440" alt="#">
-            </figure>
-            <div class="services__slide-info">
-              Уборка общежития<br>
-              <b>от 45₽/час</b>
-            </div>
+        </div>
+        <div class="services__slider-slide swiper-slide">
+          <figure class="services__slide-image base-figure">
+            <a data-fslightbox href="img/image/heading-slide-1.png">
+              <img class="services__slide-img" src="img/image/heading-slide-1.png" width="636" height="440" alt="#">
+            </a>
+          </figure>
+          <div class="services__slide-info">
+            Уборка общежития<br>
+            <b>от 45₽/час</b>
           </div>
         </div>
       </div>
@@ -353,7 +332,7 @@
             <use href="img/icon/sprite.svg#slider-arrow-icon"></use>
           </svg>
         </button>
-        <button class="services__slider-arrow services__slider-arrow--prev slider-arrow slider-arrow--next base-button" style="transform: scaleX(-1);">
+        <button class="services__slider-arrow services__slider-arrow--next slider-arrow slider-arrow--next base-button" style="transform: scaleX(-1);">
           <svg class="slider-arrow__icon" width="11" height="18" alt="#">
             <use href="img/icon/sprite.svg#slider-arrow-icon"></use>
           </svg>
@@ -363,8 +342,8 @@
   </section>
 
   <section class="features">
-    <div class="features__container base-container">
-      <h2 class="features__title section-title base-title"><span class="color-elm">Виды услуг</span>, которые мы<br> предоставляем </h2>
+    <div class="features__container base-container" id="services">
+      <h2 class="features__title section-title base-title"><span class="color-elm">Виды услуг</span>, которые мы предоставляем </h2>
       <div class="features__wrapper">
         <div class="features__wrapper-item">
           <div class="features__item-info">
@@ -476,7 +455,7 @@
   </section>
 
   <section class="callback-block">
-    <div class="callback-block__container base-container">
+    <div class="callback-block__container base-container" id="contacts">
       <h2 class="callback-block__title section-title base-title"><span class="color-elm">Свяжитесь с нами</span> и мы вам поможем</h2>
       <div class="callback-block__wrapper">
         <div class="callback-block__column callback-block__column--left">
@@ -531,7 +510,7 @@
           </div>
         </div>
         <button class="persi-button base-button" type="button" id="callback_modal_button">
-          Заказать<br>
+          Заказать
           звонок
         </button>
       </div>
