feat: 🎸 Главная: анимации, адаптив, модалка, исправления

--- a/src/index.html
+++ b/src/index.html
@@ -111,7 +111,7 @@
 
   <section class="description">
     <div class="description__container base-container" id="about">
-      <div class="description__column description__column--left">
+      <div class="description__column description__column--left" data-aos="fade-right" data-aos-duration="1500">
         <h2 class="description__column-title section-title base-title"><span class="color-elm">USC Master</span> занимается разными видами сервиса</h2>
         <div class="description__column-text main-text">
           <p>USC Master предлагает различные услуги,
@@ -127,7 +127,7 @@
           </p>
         </div>
       </div>
-      <div class="description__column description__column--right">
+      <div class="description__column description__column--right" data-aos="fade-left" data-aos-duration="1500">
         <figure class="description__column-image base-figure">
           <img class="description__column-img" src="img/image/description-image.png" width="526" height="272" alt="#">
         </figure>
@@ -224,11 +224,11 @@
       <h2 class="features__title section-title base-title"><span class="color-elm">Виды услуг</span>, которые мы предоставляем </h2>
       <div class="features__wrapper">
         <div class="features__wrapper-item">
-          <div class="features__item-info">
+          <div class="features__item-info" data-aos="fade-right" data-aos-duration="1500">
             <h3 class="features__item-title base-title">Сервис 24/7</h3>
             <div class="features__item-num">01</div>
           </div>
-          <div class="features__item-content">
+          <div class="features__item-content" data-aos="fade-left" data-aos-duration="1500">
             <div class="features__item-text main-text">
               <p>
                 MASTER USC - это компания,
@@ -245,11 +245,11 @@
           </div>
         </div>
         <div class="features__wrapper-item">
-          <div class="features__item-info">
+          <div class="features__item-info" data-aos="fade-right" data-aos-duration="1500">
             <h3 class="features__item-title base-title">Сервис 24/7</h3>
             <div class="features__item-num">01</div>
           </div>
-          <div class="features__item-content">
+          <div class="features__item-content" data-aos="fade-left" data-aos-duration="1500">
             <div class="features__item-text main-text">
               <p>
                 MASTER USC - это компания,
@@ -266,11 +266,11 @@
           </div>
         </div>
         <div class="features__wrapper-item">
-          <div class="features__item-info">
+          <div class="features__item-info" data-aos="fade-right" data-aos-duration="1500">
             <h3 class="features__item-title base-title">Сервис 24/7</h3>
             <div class="features__item-num">01</div>
           </div>
-          <div class="features__item-content">
+          <div class="features__item-content" data-aos="fade-left" data-aos-duration="1500">
             <div class="features__item-text main-text">
               <p>
                 MASTER USC - это компания,
@@ -287,11 +287,11 @@
           </div>
         </div>
         <div class="features__wrapper-item">
-          <div class="features__item-info">
+          <div class="features__item-info" data-aos="fade-right" data-aos-duration="1500">
             <h3 class="features__item-title base-title">Сервис 24/7</h3>
             <div class="features__item-num">01</div>
           </div>
-          <div class="features__item-content">
+          <div class="features__item-content" data-aos="fade-left" data-aos-duration="1500">
             <div class="features__item-text main-text">
               <p>
                 MASTER USC - это компания,
@@ -308,11 +308,11 @@
           </div>
         </div>
         <div class="features__wrapper-item">
-          <div class="features__item-info">
+          <div class="features__item-info" data-aos="fade-right" data-aos-duration="1500">
             <h3 class="features__item-title base-title">Сервис 24/7</h3>
             <div class="features__item-num">01</div>
           </div>
-          <div class="features__item-content">
+          <div class="features__item-content" data-aos="fade-left" data-aos-duration="1500">
             <div class="features__item-text main-text">
               <p>
                 MASTER USC - это компания,
