--- a/index.html
+++ b/index.html
@@ -111,8 +111,12 @@
           Отправьте заявку и наш менеджер с вами свяжется в ближайшее время
         </p>
         <form class="modal-callback__inner-form" id="modal_callback_form">
-          <input class="modal-callback__form-input" type="text" name="name">
-          <input class="modal-callback__form-input" type="phone" name="phone">
+          <input class="modal-callback__form-input" type="text" name="name" placeholder="Имя" required>
+          <input class="modal-callback__form-input" type="phone" name="phone" placeholder="Телефон" required>
+          <input class="modal-callback__form-input modal-callback__form-input--check visually-hidden" type="checkbox" id="check" checked required>
+          <label class="modal-callback__form-label" for="check">
+            Я согласен(на) с <a href="#">обработкой персональных данных</a>
+          </label>
           <button class="modal-callback__form-submit base-button" type="submit">Отправить</button>
         </form>
       </div>
@@ -233,7 +237,7 @@
 
   <section class="description">
     <div class="description__container base-container" id="about">
-      <div class="description__column description__column--left">
+      <div class="description__column description__column--left" data-aos="fade-right" data-aos-duration="1500">
         <h2 class="description__column-title section-title base-title"><span class="color-elm">USC Master</span> занимается разными видами сервиса</h2>
         <div class="description__column-text main-text">
           <p>USC Master предлагает различные услуги,
@@ -249,7 +253,7 @@
           </p>
         </div>
       </div>
-      <div class="description__column description__column--right">
+      <div class="description__column description__column--right" data-aos="fade-left" data-aos-duration="1500">
         <figure class="description__column-image base-figure">
           <img class="description__column-img" src="img/image/description-image.png" width="526" height="272" alt="#">
         </figure>
@@ -346,11 +350,11 @@
       <h2 class="features__title section-title base-title"><span class="color-elm">Виды услуг</span>, которые мы предоставляем </h2>
       <div class="features__wrapper">
         <div class="features__wrapper-item">
-          <div class="features__item-info">
+          <div class="features__item-info" data-aos="fade-right" data-aos-duration="1500">
             <h3 class="features__item-title base-title">Сервис 24/7</h3>
             <div class="features__item-num">01</div>
           </div>
-          <div class="features__item-content">
+          <div class="features__item-content" data-aos="fade-left" data-aos-duration="1500">
             <div class="features__item-text main-text">
               <p>
                 MASTER USC - это компания,
@@ -367,11 +371,11 @@
           </div>
         </div>
         <div class="features__wrapper-item">
-          <div class="features__item-info">
+          <div class="features__item-info" data-aos="fade-right" data-aos-duration="1500">
             <h3 class="features__item-title base-title">Сервис 24/7</h3>
             <div class="features__item-num">01</div>
           </div>
-          <div class="features__item-content">
+          <div class="features__item-content" data-aos="fade-left" data-aos-duration="1500">
             <div class="features__item-text main-text">
               <p>
                 MASTER USC - это компания,
@@ -388,11 +392,11 @@
           </div>
         </div>
         <div class="features__wrapper-item">
-          <div class="features__item-info">
+          <div class="features__item-info" data-aos="fade-right" data-aos-duration="1500">
             <h3 class="features__item-title base-title">Сервис 24/7</h3>
             <div class="features__item-num">01</div>
           </div>
-          <div class="features__item-content">
+          <div class="features__item-content" data-aos="fade-left" data-aos-duration="1500">
             <div class="features__item-text main-text">
               <p>
                 MASTER USC - это компания,
@@ -409,11 +413,11 @@
           </div>
         </div>
         <div class="features__wrapper-item">
-          <div class="features__item-info">
+          <div class="features__item-info" data-aos="fade-right" data-aos-duration="1500">
             <h3 class="features__item-title base-title">Сервис 24/7</h3>
             <div class="features__item-num">01</div>
           </div>
-          <div class="features__item-content">
+          <div class="features__item-content" data-aos="fade-left" data-aos-duration="1500">
             <div class="features__item-text main-text">
               <p>
                 MASTER USC - это компания,
@@ -430,11 +434,11 @@
           </div>
         </div>
         <div class="features__wrapper-item">
-          <div class="features__item-info">
+          <div class="features__item-info" data-aos="fade-right" data-aos-duration="1500">
             <h3 class="features__item-title base-title">Сервис 24/7</h3>
             <div class="features__item-num">01</div>
           </div>
-          <div class="features__item-content">
+          <div class="features__item-content" data-aos="fade-left" data-aos-duration="1500">
             <div class="features__item-text main-text">
               <p>
                 MASTER USC - это компания,
