--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta name="format-detection" content="address=no">
   <meta name="format-detection" content="email=no">
 
-  <link href="css/style.min.css?v=1.1" rel="stylesheet">
+  <link href="css/style.min.css?v=1.2" rel="stylesheet">
   <title></title>
 </head>
 
@@ -112,7 +112,7 @@
         </p>
         <form class="modal-callback__inner-form" id="modal_callback_form">
           <input class="modal-callback__form-input" type="text" name="name" placeholder="Имя" required>
-          <input class="modal-callback__form-input" type="phone" name="phone" placeholder="Телефон" required>
+          <input class="modal-callback__form-input" type="tel" name="phone" placeholder="Телефон" required>
           <input class="modal-callback__form-input modal-callback__form-input--check visually-hidden" type="checkbox" id="check" checked required>
           <label class="modal-callback__form-label" for="check">
             Я согласен(на) с <a href="#">обработкой персональных данных</a>
@@ -634,7 +634,7 @@
 </footer>
 
 <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
-<script src="js/index.min.js?v=1.0"></script>
+<script src="js/index.min.js?v=1.2"></script>
 </body>
 
 </html>
