--- a/src/index.html
+++ b/src/index.html
@@ -150,7 +150,7 @@
       <div class="services__slider-wrapper swiper-wrapper">
         <div class="services__slider-slide swiper-slide">
           <figure class="services__slide-image base-figure">
-            <a data-fslightbox href="img/image/heading-slide-1.png">
+            <a data-fancybox="gallery" href="img/image/heading-slide-1.png">
               <img class="services__slide-img" src="img/image/heading-slide-1.png" width="636" height="440" alt="#">
             </a>
           </figure>
@@ -161,7 +161,7 @@
         </div>
         <div class="services__slider-slide swiper-slide">
           <figure class="services__slide-image base-figure">
-            <a data-fslightbox href="img/image/heading-slide-1.png">
+            <a data-fancybox="gallery" href="img/image/heading-slide-1.png">
               <img class="services__slide-img" src="img/image/heading-slide-1.png" width="636" height="440" alt="#">
             </a>
           </figure>
@@ -172,7 +172,7 @@
         </div>
         <div class="services__slider-slide swiper-slide">
           <figure class="services__slide-image base-figure">
-            <a data-fslightbox href="img/image/heading-slide-1.png">
+            <a data-fancybox="gallery" href="img/image/heading-slide-1.png">
               <img class="services__slide-img" src="img/image/heading-slide-1.png" width="636" height="440" alt="#">
             </a>
           </figure>
@@ -183,7 +183,7 @@
         </div>
         <div class="services__slider-slide swiper-slide">
           <figure class="services__slide-image base-figure">
-            <a data-fslightbox href="img/image/heading-slide-1.png">
+            <a data-fancybox="gallery" href="img/image/heading-slide-1.png">
               <img class="services__slide-img" src="img/image/heading-slide-1.png" width="636" height="440" alt="#">
             </a>
           </figure>
@@ -194,7 +194,7 @@
         </div>
         <div class="services__slider-slide swiper-slide">
           <figure class="services__slide-image base-figure">
-            <a data-fslightbox href="img/image/heading-slide-1.png">
+            <a data-fancybox="gallery" href="img/image/heading-slide-1.png">
               <img class="services__slide-img" src="img/image/heading-slide-1.png" width="636" height="440" alt="#">
             </a>
           </figure>
@@ -381,6 +381,14 @@
         background-color: var(--color-white);
 
         padding: 58px 0 0 0;
+      }
+
+      @media (min-width: 320px) and (max-width: 1279px) {
+        .map {
+          /* height: 100% !important; */
+
+          padding: 0;
+        }
       }
 
       .ymaps-2-1-79-ground-pane {
