--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta name="format-detection" content="address=no">
   <meta name="format-detection" content="email=no">
 
-  <link href="css/style.min.css?v=1.3" rel="stylesheet">
+  <link href="css/style.min.css?v=1.4" rel="stylesheet">
   <title></title>
 </head>
 
@@ -276,7 +276,7 @@
       <div class="services__slider-wrapper swiper-wrapper">
         <div class="services__slider-slide swiper-slide">
           <figure class="services__slide-image base-figure">
-            <a data-fslightbox href="img/image/heading-slide-1.png">
+            <a data-fancybox="gallery" href="img/image/heading-slide-1.png">
               <img class="services__slide-img" src="img/image/heading-slide-1.png" width="636" height="440" alt="#">
             </a>
           </figure>
@@ -287,7 +287,7 @@
         </div>
         <div class="services__slider-slide swiper-slide">
           <figure class="services__slide-image base-figure">
-            <a data-fslightbox href="img/image/heading-slide-1.png">
+            <a data-fancybox="gallery" href="img/image/heading-slide-1.png">
               <img class="services__slide-img" src="img/image/heading-slide-1.png" width="636" height="440" alt="#">
             </a>
           </figure>
@@ -298,7 +298,7 @@
         </div>
         <div class="services__slider-slide swiper-slide">
           <figure class="services__slide-image base-figure">
-            <a data-fslightbox href="img/image/heading-slide-1.png">
+            <a data-fancybox="gallery" href="img/image/heading-slide-1.png">
               <img class="services__slide-img" src="img/image/heading-slide-1.png" width="636" height="440" alt="#">
             </a>
           </figure>
@@ -309,7 +309,7 @@
         </div>
         <div class="services__slider-slide swiper-slide">
           <figure class="services__slide-image base-figure">
-            <a data-fslightbox href="img/image/heading-slide-1.png">
+            <a data-fancybox="gallery" href="img/image/heading-slide-1.png">
               <img class="services__slide-img" src="img/image/heading-slide-1.png" width="636" height="440" alt="#">
             </a>
           </figure>
@@ -320,7 +320,7 @@
         </div>
         <div class="services__slider-slide swiper-slide">
           <figure class="services__slide-image base-figure">
-            <a data-fslightbox href="img/image/heading-slide-1.png">
+            <a data-fancybox="gallery" href="img/image/heading-slide-1.png">
               <img class="services__slide-img" src="img/image/heading-slide-1.png" width="636" height="440" alt="#">
             </a>
           </figure>
@@ -530,6 +530,14 @@
         padding: 58px 0 0 0;
       }
 
+      @media (min-width: 320px) and (max-width: 1279px) {
+        .map {
+          /* height: 100% !important; */
+
+          padding: 0;
+        }
+      }
+
       .ymaps-2-1-79-ground-pane {
         -ms-filter: grayscale(1);
         -webkit-filter: grayscale(1);
@@ -634,7 +642,7 @@
 </footer>
 
 <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
-<script src="js/index.min.js?v=1.3"></script>
+<script src="js/index.min.js?v=1.4"></script>
 </body>
 
 </html>
