--- a/index.html
+++ b/index.html
@@ -10,7 +10,15 @@
   <meta name="format-detection" content="address=no">
   <meta name="format-detection" content="email=no">
 
-  <link href="css/style.min.css?v=1.4" rel="stylesheet">
+  <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
+  <link rel="manifest" href="img/favicon/site.webmanifest">
+  <link rel="mask-icon" href="img/favicon/safari-pinned-tab.svg" color="#1d707a">
+  <meta name="msapplication-TileColor" content="#1d707a">
+  <meta name="theme-color" content="#1d707a">
+
+  <link href="css/style.min.css?v=1.6" rel="stylesheet">
   <title></title>
 </head>
 
@@ -642,7 +650,7 @@
 </footer>
 
 <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
-<script src="js/index.min.js?v=1.4"></script>
+<script src="js/index.min.js?v=1.6"></script>
 </body>
 
 </html>
